--- a/frontend/src/app/cadastro/cadastro.component.html
+++ b/frontend/src/app/cadastro/cadastro.component.html
@@ -5,29 +5,24 @@
 
 <body>
     <div id="login" class="form-group">
-        <h3 class="text-center text-white pt-5">BEM-VINDO</h3>
+        <h3 class="text-center text-white pt-5">FAÇA SEU CADASTRO</h3>
         <div class="container">
             <div id="login-row" class="row justify-content-center align-items-center">
                 <div id="login-column" class="col-md-6">
                     <div id="login-box" class="col-md-12">
-                        <form id="login-form" class="form" [formGroup]="clienteForm" (ngSubmit)="enviar()">
-                            <h3 class="text-center text-info">Login</h3>
+                        <form id="login-form" class="form" [formGroup]="clienteForm" (ngSubmit)="cadastrar()">
+                            <h3 class="text-center text-info">Cadastro</h3>
                             <div class="form-group">
                                 <label for="username" class="text-info">Email:</label><br>
                                 <input type="text" name="username" id="username" class="form-control" formControlName="email">
                             </div>
                             <div class="form-group">
                                 <label for="password" class="text-info">Senha:</label><br>
-                                <input type="password" name="password" id="password" class="form-control" formControlName="senha">
+                                <input type="text" name="password" id="password" class="form-control" formControlName="senha">
                             </div>
-                            <div class="form-group">
-                        
-                                <button type="submit" class="btn btn-info btn-md">enviar</button>
-                            </div>
-                            <br>
+                            <br><br><br><br>
                             <div id="register-link" class="text-right">
-                                <button type="button" class="btn btn-outline-secondary"  id="btnRegistro" >Registre aqui </button>
-
+                                <button type="button" class="btn btn-outline-secondary"  id="btnBusca" >Enviar</button>
                             </div>
                         </form>
                     </div>
