--- a/frontend/src/app/cadastro/cadastro.component.html
+++ b/frontend/src/app/cadastro/cadastro.component.html
@@ -18,11 +18,11 @@
                             </div>
                             <div class="form-group">
                                 <label for="password" class="text-info">Senha:</label><br>
-                                <input type="text" name="password" id="password" class="form-control" formControlName="senha">
+                                <input type="password" name="password" id="password" class="form-control" formControlName="senha">
                             </div>
                             <br><br><br><br>
                             <div id="register-link" class="text-right">
-                                <button type="button" class="btn btn-outline-secondary"  id="btnBusca" >Enviar</button>
+                                <button type="submit" class="btn btn-outline-secondary"  id="btnBusca" >Enviar</button>
                             </div>
                         </form>
                     </div>
