--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -14,11 +14,11 @@
                             <h3 class="text-center text-info">Login</h3>
                             <div class="form-group">
                                 <label for="username" class="text-info">Email:</label><br>
-                                <input type="text" name="username" id="username" class="form-control" formControlName="email">
+                                <input type="text" name="username" id="username" class="form-control" formControlName="email" required />
                             </div>
                             <div class="form-group">
                                 <label for="password" class="text-info">Senha:</label><br>
-                                <input type="password" name="password" id="password" class="form-control" formControlName="senha">
+                                <input type="password" name="password" id="password" class="form-control" formControlName="senha" required />
                             </div>
                             <div class="form-group">
                         
@@ -26,7 +26,7 @@
                             </div>
                             <br>
                             <div id="register-link" class="text-right">
-                                <button type="button" class="btn btn-outline-secondary"  id="btnRegistro" >Registre aqui </button>
+                                <a routerLink="/cadastro" class="btn btn-outline-secondary"  id="btnRegistro" >Registre aqui </a>
 
                             </div>
                         </form>
